# pyucis

./: .buildinfo  .envrc  .gitignore  .project  .pydevproject  CMakeLists.txt  CONVERSION_PLAN.md  DOCUMENTATION_PROGRESS.md  DOC_UPDATES_SUMMARY.md  IMPLEMENTATION_PLAN.md  Makefile  PYUCIS_API_DOCUMENTATION_PLAN.md  README.md  SQLITE_FULL_API_PLAN.md  SQLITE_MERGE_ANALYSIS.md  SQLITE_STATUS_UPDATE.md  TEST_HISTORY_DESIGN.md  TEST_STATUS_SUMMARY.md  UCIS_API_TEST_PLAN.md  UCIS_COVERAGE_GAP_ANALYSIS.md  UCIS_IMPLEMENTATION_PLAN.md  UCIS_Version_1.0_Final_June-2012.md  XML_BACKEND_IMPROVEMENTS.md  XML_FULL_SUPPORT_PLAN.md  azure-pipelines.yml  cocotb_avl_coverage_import.html  commands.html  gen.sh  genindex.html  index.html  introduction.html  ivpm.yaml  mcp_server.html  merge.lists  objects.inv  out  py-modindex.html  pyproject.toml  pytest.ini  reference.html  (+17 more)
.github/workflows/: ci.yml
_sources/: index.rst.txt  introduction.rst.txt  reference.rst.txt  show_commands.rst.txt  verilator_coverage_import.rst.txt  xml_interchange.rst.txt
_sources/cicd/: gitlab-ci.rst.txt  index.rst.txt  jenkins.rst.txt
_sources/reference/: coverage_report_api.rst.txt  html_coverage_report.rst.txt  index.rst.txt  sqlite_api.rst.txt  sqlite_schema_reference.rst.txt  xml_interchange.rst.txt  yaml_coverage.rst.txt
_sources/working-with-coverage/: index.rst.txt
ai-integration/: mcp-server.html
cicd/: github-actions.html  gitlab-ci.html  index.html  jenkins.html
doc/: .gitignore  ApiDesign.md  Changelog.md  Makefile  TODO.md  UcisLrmNotes.md  requirements.txt  scdb_schema.md
doc/source/: cocotb_avl_coverage_import.rst  commands.rst  conf.py  index.rst  introduction.rst  mcp_server.rst  reference.rst  tui.rst  xml_interchange.rst
etc/: ivpm.info
examples/: README.md
examples/ai_assisted_workflow/: AI_ASSISTED_WORKFLOW.md  AI_EXAMPLES_COMPLETE.md  AI_EXAMPLES_README.md  AI_EXAMPLES_SUMMARY.md  AI_INDEX.md  MIGRATION_COMPLETE.md  QUICK_START_AI.md  README.md  coverage  query_test_coverage.py  validate_ai_examples.sh
examples/verilator/: .gitignore  Makefile  README.md  counter.sv  counter_tb.sv  demo_test_history.sh  query_test_coverage.py  report_coverage.py  test_basic_counting.sv  test_convert.cdb  test_format_detection.sh  test_hierarchy_scroll.sh  test_load_operations.sv  test_merger.cdb  test_overflow.sv  test_reset.sv
getting-started/: index.html  installation.html  quickstart.html
importing/: avl.html  cocotb.html  index.html  verilator.html
reference/: best-practices.html  cli.html  coverage_report_api.html  coverage_report_json.html  html_coverage_report.html  index.html  native-c-library.html  native_api.html  recording_coverage_base_practices.html  recording_coverage_best_practices.html  reference.html  sqlite-api.html  sqlite_api.html  sqlite_schema_reference.html  ucis_c_api.html  ucis_oo_api.html  xml_interchange.html  yaml_coverage.html
reference/formats/: index.html  ncdb-format.html  sqlite-schema.html  xml-interchange.html  yaml-format.html
reference/python-api/: c-style-api.html  index.html  oo-api.html
reference/report-formats/: html-report-format.html  index.html  json-report-format.html
reporting/: exporting.html  html-report.html  index.html
schema/: ucis.xsd  ucis.xsd.orig
scripts/: create_sample_db.py  demo_tui.py  test_tui.py  update_copyright.py
src/native/: BUILD.md  CMakeLists.txt  Makefile  README.md  ucis.h  ucisConfig.cmake.in  ucis_api.c  ucis_cover.c  ucis_handle.c  ucis_impl.h  ucis_iterator.c  ucis_schema.c  ucis_scope.c  ucis_types.h  ucis_util.c
src/pyucis/: __init__.py  cov_scope.py  cover_data.py  cover_index.py  cover_instance.py  cover_item.py  cover_type.py  cover_type_t.py  covergroup.py  coverpoint.py  cross.py  cvg_bin_scope.py  cvg_scope.py  db.py  du_scope.py  file_handle.py  flags_t.py  func_cov_scope.py  handle_property.py  history_node.py  history_node_kind.py  ignore_bin_scope.py  illegal_bin_scope.py  instance_coverage.py  instance_scope.py  int_property.py  name_value.py  obj.py  real_property.py  scope.py  scope_t.py  scope_type_t.py  source_file.py  source_info.py  source_t.py  statement_id.py  str_property.py  string_property.py  test_data.py  test_status.py  (+3 more)
src/ucis/: __init__.py  __main__.py  __version__.py  cov_scope.py  cover_data.py  cover_flags_t.py  cover_index.py  cover_instance.py  cover_item.py  cover_type.py  cover_type_t.py  covergroup.py  coverpoint.py  cross.py  cvg_bin_scope.py  cvg_scope.py  db.py  db_format_if.py  db_format_rgy.py  du_name.py  du_scope.py  file_handle.py  filter_rgy.py  flags_t.py  formal_status_t.py  format_detection.py  func_cov_scope.py  handle_property.py  history_node.py  history_node_kind.py  ignore_bin_scope.py  illegal_bin_scope.py  instance_coverage.py  instance_scope.py  int_property.py  name_value.py  obj.py  real_property.py  scope.py  scope_type_t.py  (+12 more)
tests/: README.md  test_controller.py  test_coverage_metrics.py  test_db_manager.py  test_format_registration.py  test_issue1_sqlite_registration.py  test_issue2_create_cover_instance.py  test_key_parser.py  test_test_association_integration.py  test_test_coverage_api.py  test_tools.py  test_tui_code_coverage.py  test_tui_hierarchy_toggle.py  test_tui_integration.py  test_tui_model_fidelity.py  test_tui_navigation.py  test_tui_report_parity.py  test_tui_view_data.py  tui_fixtures.py
tests/conversion/: conftest.py  test_avl_conversion.py  test_cocotb_conversion.py  test_conversion_listener.py  test_format_capabilities.py  test_lcov_conversion.py  test_strict_mode.py  test_ucis_to_ucis.py  test_vltcov_conversion.py  test_xml_conversion.py  test_yaml_conversion.py
tests/integration/: test_ci_export.py  test_history_workflow.py  test_testplan_workflow.py
tests/sqlite/: __init__.py  test_parallel_merge.py  (+5 more)
tests/unit/native/: CMakeLists.txt  __init__.py  conftest.py  run_all_tests.py  test_basic.py  test_coverage.py  test_scopes.py  ucis_loader.py  verify_scopes.py
working-with-coverage/: analyzing.html  comparing.html  exploring-tui.html  index.html  merging.html  reports.html  test-history.html  testplan.html
(+415 files in other folders)
